# CTG

./: .gitignore  README.md  plan.md  pyproject.toml
ctg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/summary/: dataset_statistics.json  dataset_summary.csv
doc/: composition.txt  graduate-thesis.typ  main.typ  pipeline-guide.typ  refs.bib  thesis.typ
docs/: ctg_benchmark_presentation 4.odp  ctg_benchmark_presentation.pptx  make_ppt.py
notebooks/: 01-BlockA-DataDiscovery.ipynb  02-BlockB-Preprocessing.ipynb  03-BlockC-Segmentation.ipynb  04-BlockD-FeatureEngineering.ipynb  05-BlockE-3Class-RandomForest.ipynb  05-BlockE-BinaryBaseline-RandomForest.ipynb  05-BlockE-RandomForest.ipynb  06-BlockF-PostProcessing.ipynb  07-BlockG-CNN.ipynb  RandomForest.ipynb
outputs/: blockB_example_qc.csv  dataset_statistics.json  dataset_summary.csv  segmentation_manifest.csv
outputs/models/: .gitkeep  cnn_3class_history.csv  cnn_3class_model.pt  cnn_3class_split_summary.json  cnn_vs_rf_comparison.json
project-details/: Project-Descriptions - Copy.docx  plan.txt
src/: __init__.py  cnn.py  feature_extraction.py  nice_labels.py  preprocessing.py  segmentation.py  utils.py
